--- a/frontend/src/app/components/capa-bibliografia/capa-bibliografia.scss
+++ b/frontend/src/app/components/capa-bibliografia/capa-bibliografia.scss
@@ -175,6 +175,14 @@
           font-weight: 600;
         }
 
+        h4 {
+          font-size: 1.5rem;
+          color: #3949ab;
+          margin-top: 1.5rem;
+          margin-bottom: 0.75rem;
+          font-weight: 600;
+        }
+
         p {
           font-size: 1.1rem;
           line-height: 1.8;
@@ -343,6 +351,10 @@
           }
 
           h3 {
+            font-size: 1.25rem;
+          }
+
+          h4 {
             font-size: 1.25rem;
           }
 
