--- a/frontend/src/app/modules/app6-geopolitica-relacoes-internacionais/app6-geopolitica-relacoes-internacionais-bibliografia/app6-geopolitica-relacoes-internacionais-bibliografia.html
+++ b/frontend/src/app/modules/app6-geopolitica-relacoes-internacionais/app6-geopolitica-relacoes-internacionais-bibliografia/app6-geopolitica-relacoes-internacionais-bibliografia.html
@@ -8,5 +8,9 @@
   *ngIf="showCapa"
   [capas]="capas"
   [markdownPath]="markdownPath"
-  [basePath]="basePath">
+  [basePath]="basePath"
+  [conceitosPath]="conceitosPath"
+  [flashcardsPath]="flashcardsPath"
+  [mediaPath]="mediaPath"
+  [perguntasPath]="perguntasPath">
 </app-capa-bibliografia>
