--- a/frontend/src/app/components/flash-cards/flash-cards.html
+++ b/frontend/src/app/components/flash-cards/flash-cards.html
@@ -1,5 +1,5 @@
 <div class="main-container">
-
+    <!-- Botões de navegação (similar ao componente capa-bibliografia) -->
   <div class="header">
     <h2>📚 Flash Cards</h2>
     <div class="stats" *ngIf="!isLoading">
@@ -14,6 +14,8 @@
       </span>
     </div>
   </div>
+
+
 
   <!-- Filtros -->
   <div class="filters-section" *ngIf="!isLoading">
