--- a/frontend/src/app/modules/app6-geopolitica-relacoes-internacionais/app6-geopolitica-relacoes-internacionais-conceitos/app6-geopolitica-relacoes-internacionais-conceitos.html
+++ b/frontend/src/app/modules/app6-geopolitica-relacoes-internacionais/app6-geopolitica-relacoes-internacionais-conceitos/app6-geopolitica-relacoes-internacionais-conceitos.html
@@ -1,12 +1,17 @@
-<header class="page-header">
-  <div class="breadcrumb">
-    <a routerLink="/app6">🌍 Geopolítica & Relações Internacionais</a>
-  </div>
-</header>
+<!-- Header reutilizável fornecido pelo wrapper de módulo -->
+<app-header-concent
+  [moduleEmoji]="'🌍'"
+  [moduleLabel]="pageTitle"
+  [showBibliografia]="true"
+  [showFlashcards]="true"
+  [showMedia]="true"
+  [showPerguntas]="true"
+  [showConceitos]="true">
+</app-header-concent>
 
-<!-- Componente reutilizável de conceitos -->
+<!-- Componente reutilizável de conceitos (sem header interno) -->
 <app-conceitos
   [bibliografiaIds]="geopoliticaBibliografiaIds"
-  [title]="''"
-  [emptyMessage]="emptyMessage">
+  [emptyMessage]="emptyMessage"
+  [showHeader]="false">
 </app-conceitos>
