--- a/frontend/src/app/modules/app6-geopolitica-relacoes-internacionais/app6-geopolitica-relacoes-internacionais-conceitos/app6-geopolitica-relacoes-internacionais-conceitos.html
+++ b/frontend/src/app/modules/app6-geopolitica-relacoes-internacionais/app6-geopolitica-relacoes-internacionais-conceitos/app6-geopolitica-relacoes-internacionais-conceitos.html
@@ -6,7 +6,7 @@
   [showFlashcards]="true"
   [showMedia]="true"
   [showPerguntas]="true"
-  [showConceitos]="true">
+  [showConceitos]="false">
 </app-header-concent>
 
 <!-- Componente reutilizável de conceitos (sem header interno) -->
