--- a/frontend/src/app/modules/app6-geopolitica-relacoes-internacionais/app6-geopolitica-relacoes-internacionais-flashcards/app6-geopolitica-relacoes-internacionais-flashcards.html
+++ b/frontend/src/app/modules/app6-geopolitica-relacoes-internacionais/app6-geopolitica-relacoes-internacionais-flashcards/app6-geopolitica-relacoes-internacionais-flashcards.html
@@ -3,7 +3,7 @@
   [moduleEmoji]="'🌍'"
   [moduleLabel]="pageTitle"
   [showBibliografia]="true"
-  [showFlashcards]="true"
+  [showFlashcards]="false"
   [showMedia]="true"
   [showPerguntas]="true"
   [showConceitos]="true">
