--- a/frontend/src/app/modules/app6-geopolitica-relacoes-internacionais/app6-geopolitica-relacoes-internacionais-media/app6-geopolitica-relacoes-internacionais-media.html
+++ b/frontend/src/app/modules/app6-geopolitica-relacoes-internacionais/app6-geopolitica-relacoes-internacionais-media/app6-geopolitica-relacoes-internacionais-media.html
@@ -1,3 +1,14 @@
+  <!-- Componente de Flash Cards -->
+<app-header-concent
+  [moduleEmoji]="'🌍'"
+  [moduleLabel]="pageTitle"
+  [showBibliografia]="true"
+  [showFlashcards]="true"
+  [showMedia]="false"
+  [showPerguntas]="true"
+  [showConceitos]="true">
+</app-header-concent>
+
 <!-- Componente de vídeos e podcasts - só renderiza quando houver dados -->
 <app-videos-podcasts 
   *ngIf="!isLoading && bibliografiasMedia.length > 0"
