--- a/frontend/src/app/components/flash-cards/flash-cards.html
+++ b/frontend/src/app/components/flash-cards/flash-cards.html
@@ -63,7 +63,7 @@
         class="btn btn-primary"
         (click)="loadRandomFlashCards()"
         [disabled]="allFlashCards.length === 0">
-        🎲 Embaralhar Cards
+        🎲 Embaralhar
       </button>
       
       <button 
@@ -149,8 +149,8 @@
       class="btn btn-primary"
       (click)="loadRandomFlashCards()"
       [disabled]="allFlashCards.length === 0"
-      aria-label="Embaralhar Cards">
-      🎲 Embaralhar Cards
+      aria-label="Embaralhar">
+      🎲 Embaralhar
     </button>
     
     <button 
